# purr

./: .gitignore  .prettierrc.json  README.md  eslint.config.mjs  index.html  next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
docs/: waveform-scroll-sync.md  waveform-zoom-implementation.md  waveform-zoom-proposal.md
src/: main.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main-window.json
src-tauri/src/: error.rs  event_name.rs  main.rs  utils.rs
src-tauri/src/audio/: commands.rs  mod.rs  utils.rs  waveform.rs
src-tauri/src/bin_manager/: commands.rs  download.rs  install.rs  manager.rs  metadata.rs  mod.rs  path_probe.rs  progress.rs  spec.rs  status.rs
src-tauri/src/bin_manager/ffmpeg/: mod.rs
src-tauri/src/bin_manager/yt_dlp/: mod.rs
src-tauri/src/notify/: mod.rs
src-tauri/src/whisper_server/: commands.rs  daemon.rs  events.rs  mod.rs  utils.rs
src-tauri/src/yt_dlp/: commands.rs  events.rs  mod.rs  runner.rs  state.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/editor/: page.tsx
src/app/settings/: page.tsx
src/app/tasks/: page.tsx
src/app/whisper-server/: page.tsx
src/atoms/: bin-status.ts  editor.ts  intelligence-panels.ts  llm-provider.ts  modal-open.ts  notifications.tsx  recently-viewed.ts  tasks.ts  viewed-variations.ts  waveform.ts  whisper-server.ts
src/constants/: editor.ts  languages.ts  new-tasks-form.ts  new-url-task-form.ts  translate.ts  waveform.ts  whisper-server.ts
src/hooks/: usePointerInRect.ts  useScrollSpy.ts  useWaveformScroll.ts
src/lib/commands/: index.ts
src/lib/db/: index.ts  task-atom-storage.ts
src/lib/debug/: error-boundary-triggers.ts
src/lib/events/: handlers.ts  index.ts  subjects.ts  utils.ts
src/lib/exporters/: ass.ts  csv.ts  escape.ts  index.ts  json.ts  lrc.ts  srt.ts  time.ts  txt.ts  types.ts  vtt.ts
src/lib/intelligence/: outline.ts  prompt.ts  runner.ts  summary.ts  types.ts
src/lib/llm/: resolve-model.ts
src/lib/player/: atoms.ts  index.ts
src/pages/: editor.tsx  launchpad.tsx  notifications.tsx  settings.tsx  tasks.tsx  whisper-server.tsx
src/subjects/: editor.ts
src/types/: commands.ts  events.ts  new-tasks-form.ts  new-url-task-form.ts  task.ts  tasks.ts  whisper-server.ts
(+135 files in other folders)
