[package]
name = "purr"
version = "0.1.0"
# description = "A Tauri App"
# authors = ["you"]
license = ""
repository = ""
default-run = "purr"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [
    "protocol-asset",
    "devtools",
] }
anyhow = "1.0"
thiserror = "1.0"
shared_child = "1.0.0"
symphonia = { version = "0.5.4", features = ["wav", "flac", "mp3", "isomp4", "aac"] }
rayon = "1.10"
reqwest = { version = "0.12", features = ["json", "blocking", "multipart"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
tokio = { version = "1", features = ["sync", "time", "fs", "process", "io-util", "macros"] }
tauri-plugin-prevent-default = "4"
tauri-plugin-window-state = "2"
async-trait = "0.1"
sha2 = "0.10"
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "linux")'.dependencies]
tar = "0.4"
xz2 = "0.1"

[features]
# Enables the custom protocol used for production builds.
custom-protocol = ["tauri/custom-protocol"]
